welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: too many arguments for method getMondeLargeur: ()Int
	getMondeLargeur(n,T)
                       ^